bitfield/tests/08-non-power-of-two.stderr
error: The number of variants must be a power of 2 and greater than 1
  --> tests/08-non-power-of-two.rs:10:10
   |
10 | #[derive(BitfieldSpecifier)]
   |          ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
